# L_bash_profile

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
doc/: pstats.md
scripts/: Makefile  bash_profile.sh  example.sh  script.py  script1.py  script1.sh
src/: L_bash_profile.py
tests/: script.py  test_simple.py
