[project]
name = "L_bash_profile"
version = "1.0.0"
description = "Profile the execution speed of Bash script"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["bash", "profile", "development"]
authors = [{ name = "Kamil Cukrowski", email = "kamilcukrowski@gmail.com" }]
maintainers = [{ name = "Kamil Cukrowski", email = "kamilcukrowski@gmail.com" }]
dependencies = ["graphviz", "tabulate", "click", "clickdc"]
[project.urls]
"Homepage" = "https://github.com/kamilcuk/L_bash_profile"
"Bug Reports" = "https://github.com/kamilcuk/L_bash_profile/issues"
"Source" = "https://github.com/kamilcuk/L_bash_profile/"
[project.scripts]
L_bash_profile = "L_bash_profile:cli.main"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%H:%M:%S"
filterwarnings = [
	"ignore::DeprecationWarning",
]
log_file_format = "%(asctime)s %(levelname)s %(filename)s:%(lineno)s %(message)s"
log_file_level = "DEBUG"

